[metadata]
name = fcslib 
version = 0.10.0
author = Zhewei Chen  
author_email = zchen15@github.com
description = A package to analyze flow cytometry and droplet pcr data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zchen15/fcslib
project_urls =
    Bug Tracker = https://github.com/zchen15/fcslib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

